# aws_resource_manager_2024

./: .gitattributes  Cargo.toml  README.md
src/: main.rs
